fix: text About me

--- a/public/assets/locales/ru/translation.json
+++ b/public/assets/locales/ru/translation.json
@@ -27,5 +27,6 @@
     "Your Full Name": "Ваше полное имя",
     "Your Email": "Ваш Email",
     "Type Your Message Here": "Ваше сообщение",
-    "Home": "На главную"
+    "Home": "На главную",
+    "text": "Привет снова всем! Итак, вы уже знаете, что меня зовут Серик. Немного о себе: студентка, 28 лет, живу в Таразе, Казахстан. Люблю развиваться, получать новые знания. Способен учиться самостоятельно. Люблю получать новый опыт, решать интересные задачи. Личные качества: усидчивость, высокая работоспособность, коммуникабельность, энтузиазм, честность, стрессоустойчивость, способность решать новые задачи, быстрая обучаемость, добросовестность. Могу читать техническую литературу как на русском, так и на английском языке.У меня пытливый ум и желание развиваться"
 }
