--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -27,6 +27,8 @@
     "Your Full Name": "Your Full Name",
     "Your Email": "Your Email",
     "Type Your Message Here": "Type Your Message Here",
-    "Home": "Home"
+    "Home": "Home",
+    "text": "Hello again everyone! So, you already know that my name is Serik.A little about myself: student, 28 y.o., I live in Taraz, Kazakhstan. I like to develop, gain new knowledge. Able to learn independently. I like to get new experience, solve interesting problems.Personal traits: perseverance, high capacity for work, communication skills, enthusiasm, honesty, resistance to stress, ability to solve new problems, quick learning, conscientiousness. I can read technical literature both in Russian and in English. I have an inquisitive mind and a desire to develop."
+    
     
 }
